services/manifests/nginx-tls/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/auth-url: https://auth.tineochristopher.com/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://auth.tineochristopher.com/oauth2/start?rd=$scheme://$http_host$request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email,X-Auth-Request-Access-Token
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - web.tineochristopher.com
    secretName: web-tineochristopher-com-tls
  rules:
  - host: web.tineochristopher.com
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
